# scguild-rs

./: .env  .gitignore  Cargo.toml  Cargo.toml.bak.bak  Design.md  Dockerfile  README.md  README.md.bak  deny.toml  norseline.sqlite3  ships.json  sqlx-data.json
.github/workflows/: ci.yml  dependency-security-audit.yml  deploy-gh-package.yml  general.yml
configuration/: base.yml  ci.yml  local.yml  local.yml.example
dbdesign/: 20210612134124_create_database.pgerd
design-docs/: events.md
discord-rs/: Cargo.toml
discord-rs/src/: allowed_mentions.rs  application_command.rs  attachment.rs  channel.rs  channel_mention.rs  embed.rs  guild_member.rs  interaction.rs  interaction_response.rs  lib.rs  member.rs  messages.rs  permissions.rs  role.rs  snowflake.rs  user.rs
migrations/: 20210612134124_create_database copy.sql  20210612134124_create_database.sql  99999999999999_add_seed_data.sql
migrations/2021-06-04-000927_initial/: down.sql  up.sql
norseline-app/: Cargo.toml
norseline-app/src/: crypto.rs  discord.rs  entities.rs  hex.rs  lib.rs  main.rs
norseline-app/src/database/: models.rs
norseline-app/src/database/models/: manufacturer.rs
norseline-app/src/entities/: manufacturer.rs  turret.rs
norseline-app/src/middleware/: ed25519_signatures.rs
norseline-app/tests/: api.rs  discord_ed25519_signatures.rs  health_check.rs
norseline-app/tests/common/: mod.rs
norseline-rs/: .gitignore  README.md  spec.yml  sqlx-data.json
norseline-rs/migrations/: 20210612134124_create_database copy.sql
norseline-rs/scripts/: init_db.sh
norseline-rs/src/: es_datastore.rs  telemetry.rs
norseline-rs/src/database/: models.rs
norseline-rs/src/database/models/: manufacturer.rs  ship_model.rs
norseline-rs/src/discord/: commands.rs  interaction.rs
norseline-rs/src/discord/commands/: about.rs
norseline-rs/src/discord/commands/fleet/: list.rs
norseline-rs/src/middleware/: mod.rs
norseline-rs/src/webapp/: api.rs
norseline-rs/tests/api/: api.rs  discord_api.rs  health_check.rs
scguild/: .env  Cargo.toml  Dockerfile  fly.toml
scguild-rs/: Cargo.toml  Dockerfile  spec.yml  sqlx-data.json
scguild-rs/configuration/: base.yml
scguild-rs/src/: database.rs  lib.rs  main.rs
scguild-rs/src/database/models/: ship_model.rs  user.rs
scguild-rs/src/discord/: api.rs
scguild-rs/src/discord/commands/: about.rs  hello.rs  ships.rs
scguild-rs/src/discord/commands/fleet/: add.rs
scguild-rs/src/middleware/: ed25519_signatures.rs
scguild-rs/tests/api/: api.rs  helpers.rs
scguild/configuration/: base.yml
scguild/src/: application.rs  authentication.rs  configuration.rs  email_client.rs  fleet.rs  idempotency.rs  issue_delivery_worker.rs  lib.rs  main.rs  routes.rs  services.rs  session_state.rs  startup.rs  telemetry.rs
scguild/src/authentication/: middleware.rs
scguild/src/idempotency/: persistence.rs
scguild/src/routes/: health_check.rs  subscriptions.rs
scguild/src/routes/admin/newsletters/: post.rs
scguild/src/routes/home/: home.html
scguild/src/services/: newsletter.rs
scguild/src/services/newsletter/: issue_delivery_worker.rs
scguild/src/services/newsletter/domain/: subscriber_name.rs
scguild/tests/api/: helpers.rs  newsletters.rs
src/: application.rs  configuration.rs  crypto.rs  database.rs  database_actor.rs  discord.rs  discord_actor.rs  discord_commands.rs  entities.rs  fleet.rs  hex.rs  lib.rs  main.rs  schema.rs  serde_helpers.rs  telemetry.rs  verify_ed25519_signature.rs
src/database/: mod.rs  models.rs  schema.rs
src/database/models/: manufacturer.rs  ship_model.rs  user.rs
src/db/models/: manufacturer.rs
src/discord/: api.rs  commands.rs  interaction.rs  twilight_interactions_extensions.rs
src/discord/commands/: about.rs  fleet.rs  hello.rs  ships.rs  wishlist.rs
src/discord/commands/fleet/: add.rs  list.rs
src/discord_commands/: about.rs
src/entities/: manufacturer.rs  ship.rs  turret.rs
src/middleware/: ed25519_signatures.rs  mod.rs
src/routes/: api.rs  discord_api.rs  mod.rs
src/webapp/: api.rs  health_check.rs  mod.rs
tests/: discord_ed25519_signatures.rs  health_check.rs
tests/api/: api.rs  discord_api.rs  health_check.rs  helpers.rs  main.rs
tests/common/: mod.rs
xtask/: Cargo.toml
xtask/src/: db_config.rs  lib.rs  main.rs  tasks.rs
xtask/src/tasks/: ci.rs  coverage.rs  database.rs  distribute.rs  test.rs
