[package]
name = "norseline"
version = "0.1.0"
authors = ["damccull <damccull+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "norseline"

[dependencies]
anyhow = "1.0.44"
actix-web = "=4.0.0-beta.9"
actix-cors = "0.6.0-beta.2"
actix-http = "3.0.0-beta.11"
actix-service = "2.0.0-beta.5"
chrono = "0.4.19"
config = "0.11.0"
dotenv = "0.15.0"
futures = "0.3.15"
hex = "0.4.3"
rand = "0.8"
rand-dalek = { version = "0.7", package = "rand" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "3.0.1"
serde_json = "1.0.64"
sqlx = { version = "0.5.5", features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
], default-features = false }
tokio = { version = "1", features = ["full"] }
twilight-model = "0.8"
twilight-http = "0.8"
twilight-util = { version = "0.8", features = ["builder"] }
uuid = { version = "0.8.2", features = ["serde"] }

tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.4.0-beta.8"
tracing-bunyan-formatter = "0.2.6"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2.12", features = [
    "registry",
    "env-filter",
] }

thiserror = "1.0.30"
mime = "0.3.16"
async-trait = "0.1.52"
twilight-interactions = "0.8"
urlencoding = "2.1.0"


[dependencies.ed25519-dalek]
version = "1"

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
fake = "~2.3"
linkify = "0.5.0"
once_cell = "1.8.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.68"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
