[package]
name = "norseline"
version = "0.1.0"
authors = ["damccull <damccull+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "norseline"

[dependencies]
anyhow = "~1.0.0"
actix-web = "~4.0.1"
actix-cors = "~0.6.0-beta.10"
actix-http = "~3.0.0"
actix-service = "~2.0.2"
async-trait = "0.1.52"
chrono = { version = "~0.4.19", default-features = false, features = [
    "alloc",
    "clock",
    "std",
] }
config = "~0.12.0"  
ed25519-dalek = "~1.0.0"
futures = "0.3.15"
hex = "~0.4.3"
mime = "0.3.16"
rand = "0.8"
rand-dalek = { version = "0.7", package = "rand" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "~1.0.136", features = ["derive"] }
serde-aux = "~3.0.1"
serde_json = "~1.0.79"
sqlx = { version = "0.5.11", default-features = false, features = [
    "chrono",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-actix-rustls",
    "uuid",
] }
thiserror = "~1.0.30"
tracing = { version = "~0.1.31", features = ["log"] }
tracing-actix-web = "~0.5.1"
tracing-bunyan-formatter = "~0.3.2"
tracing-futures = "~0.2.5"
tracing-log = "~0.1.2"
tracing-subscriber = { version = "~0.3.9", features = [
    "registry",
    "env-filter",
] }
tokio = { version = "1", features = ["full"] }
twilight-http = "~0.10"
twilight-interactions = "~0.10"
twilight-model = "~0.10"
twilight-util = { version = "~0.10", features = ["builder"] }
urlencoding = "~2.1.0"
uuid = { version = "~0.8.2", features = ["v4", "serde"] }
fnv = "1.0.7"


[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
fake = "~2.3"
linkify = "0.5.0"
once_cell = "1.8.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.68"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
