[package]
name = "discord-rs"
version = "0.1.0"
authors = ["damccull <damccull+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
