[package]
name = "norseline"
version = "0.1.0"
authors = ["damccull <damccull+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "norseline"

[dependencies]
actix-web = "=4.0.0-beta.6"
diesel = { version = "1.4.6", features = ["sqlite"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
futures = "0.3.15"
hex = "0.4.3"
libsqlite3-sys = { version = "^0", features = ["bundled"] }
rand = "0.8.3"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
twilight-model = "0.4.2"
twilight-http = "0.4.2"


[dependencies.ed25519-dalek]
version = "1"

[dev-dependencies]
actix-rt = "2.2"
