[package]
name = "scguild"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "scguild"
path = "src/lib.rs"

[[bin]]
name = "scguild"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
poise = "0.5.2"
tracing = "0.1.37"
tokio = { version = "1.26.0", features = ["full"] }
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
config = "0.13.3"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.190", features = ["serde_derive"] }
serde-aux = "4.2.0"
