[package]
name = "scguild"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "scguild"
path = "src/lib.rs"

[[bin]]
name = "scguild"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
poise = "0.5.2"
tracing = "0.1.37"
tokio = { version = "1.26.0", features = ["full"] }
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
config = "0.13.3"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.190", features = ["serde_derive"] }
serde-aux = "4.2.0"
axum = { version = "0.6.20", features = ["tracing"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
axum-macros = "0.3.8"
axum_session = { version = "0.8.0", default-features = false, features = ["redis-db"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
sqlx = { version = "0.7.2", default-features = false, features = ["macros", "postgres", "uuid", "chrono", "migrate", "runtime-tokio-rustls"] }
thiserror = "1.0.50"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
hyper = "0.14.27"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "request-id", "util"] }
