[package]
name = "scguild"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "scguild"

[dependencies]
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = ["std"] }
axum = { version = "0.6.20", features = ["tracing"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
axum-flash = "0.7.0"
axum-macros = "0.3.8"
axum_session = { version = "0.8.0", features = ["redis-db"], default-features = false }
#axum_session_auth = { version = "0.2.0", default-features = false, features = ["redis-db"] }
base64 = "0.21.5"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
config = "0.13.3"
http = "0.2.9"
hyper = "0.14.27"
rand = { version = "0.8.5", features = ["std_rng"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
redis_pool = "0.2.1"
reqwest = { version = "0.11.22", features = [
    "cookies",
    "json",
    "rustls-tls",
], default-features = false }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
serde-aux = "4.2.0"
sqlx = { version = "0.7.2", features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
], default-features = false }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "request-id", "util"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
validator = "0.16.1"

[dev-dependencies]
claims = "0.7.1"
fake = "=2.3.0"             # Version of fake required for rand_core compatibility
linkify = "0.10.0"
once_cell = "1"
quickcheck = "=0.9.2"        # Version of quickcheck required for rand_core compatibility
quickcheck_macros = "=0.9.1" # Version of quickcheck_macros required for rand_core compatibility
regex = "1.10.2"
serde_json = "1.0.107"
serde_urlencoded = "0.7.1"
wiremock = "0.5"
